--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,11 +13,14 @@
   margin: 0 auto;
   padding: 0rem;
   text-align: center;
-background-image: linear-gradient(90deg, #0f1b3b 0%, #0b0303bc 100%);
+  background-image: linear-gradient(90deg, #0f1b3b 0%, #0b0303bc 100%);
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .header {
