--- a/frontend/src/patientPages/Alerts.css
+++ b/frontend/src/patientPages/Alerts.css
@@ -113,8 +113,8 @@
   width: 100%;
   max-width: 1200px;
   align-items: center;
-  padding-bottom:
-
+  padding-bottom:10em
+}
 .no-alerts {
   text-align: center;
   padding: 40px 20px;
